--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: prova02_flutter_wilson_barbosa
+name: wilson_diego_barbosa_p2
 description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
@@ -17,3 +17,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets: 
+  - assets/images/anime-cat.png
+  - assets/images/cat-01.png
+  - assets/images/cat-draw.png
